fixed navigation spacing

--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@ nav {
   background-color: black;
 }
 nav .title-home {
-  width: 25%;
+  width: 20%;
   display: flex;
   justify-content: center;
   font-size: 3rem;
@@ -190,32 +190,34 @@ nav .title-home a {
   color: white;
 }
 nav .links-left {
-  width: 35%;
+  width: 55%;
   display: flex;
-  justify-content: space-between;
+  align-items: flex-end;
   font-size: 1.5rem;
 }
 nav .links-left a {
   text-decoration: none;
   color: white;
   display: flex;
-  align-items: flex-end;
+  padding: 0 2%;
 }
 nav .links-left :hover {
   color: #00e676;
 }
 nav .links-right {
   width: 25%;
-  display: flex;
   justify-content: center;
   font-size: 1.5rem;
   text-decoration: none;
   color: white;
+  display: flex;
+  justify-content: space-evenly;
 }
 nav .links-right a {
   text-decoration: none;
   color: white;
   display: flex;
+  justify-content: space-between;
   align-items: flex-end;
 }
 nav .links-right :hover {
